--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,8 +25,9 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '11'
-        distribution: 'adopt'
+        distribution: 'zulu'
         cache: maven
+        java-package: jdk
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
