--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,4 @@ jobs:
         java-version: '11'
 
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      run: mvn -B package -DskipTests
