--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,4 +19,4 @@ jobs:
         java-version: '11'
 
     - name: Build with Maven
-      run: mvn -B package -DskipTests
+      run: mvn -version | mvn -B package -DskipTests
