--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,6 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,10 +12,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'adopt-hotspot'
-        java-version: '11'
-
+      run: apt-get install openjdk-11-jdk
     - name: Build with Maven
       run: mvn -version && mvn -B package -DskipTests
