--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,10 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
-      run: sudo apt-get update && sudo apt-get install openjdk-11-jdk
+      run: sudo apt-get update && sudo apt-get install openjdk-11-jdk && javac -version && java -version
     - name: Build with Maven
       run: mvn -version && mvn -B package -DskipTests
