--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
-      run: javac -version && java -version
+      run: curl -Lvk https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_linux-x64_bin.tar.gz && tar xvf openjdk-11.0.2_linux-x64_bin.tar.gz && java -version
     - name: Build with Maven
       run: mvn -version && mvn -B package -DskipTests
     
