--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,11 +8,11 @@ on:
 jobs:
   container-test-job:
     runs-on: ubuntu-latest
-    container: adoptopenjdk/maven-openjdk11
+    container: openjdk:11
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
-      run: curl -Lvk https://download.java.net/java/GA/jdk11/9/GPL/openjdk-11.0.2_linux-x64_bin.tar.gz && tar xvf openjdk-11.0.2_linux-x64_bin.tar.gz && java -version
+      run: java -version
     - name: Build with Maven
       run: mvn -version && mvn -B package -DskipTests
     
