--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
-      run: java -version
+      run: sudo apt update && sudo apt install maven && java -version
     - name: Build with Maven
       run: mvn -version && mvn -B package -DskipTests
     
