--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,5 +14,5 @@ jobs:
     - name: Set up JDK 11
       run: apt update && apt install maven -y && java -version
     - name: Build with Maven
-      run: mvn -version && mvn -B package -DskipTests
+      run: mvn -version && mvn compile
     
