--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,11 @@
 name: Java CI with Maven
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "*" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "*" ]
 jobs:
-  container-test-job:
+  build-test:
     runs-on: ubuntu-latest
     container: openjdk:11
     steps:
@@ -16,4 +16,10 @@ jobs:
       run: mvn compile
     - name: Unit tests
       run: mvn test
-
+    - name: Unit tests
+      run: mvn install -DskipTests
+  generate-docker-image:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Setup Build Image
+      uses: docker/setup-buildx-action@v2.0.0
