--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,10 +12,13 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set up
       run: apt update && apt install maven -y
+
     - name: Build with Maven
       run: mvn compile
+
     - name: Unit tests
       run: mvn test
+
     - name: Unit tests
       run: mvn install -DskipTests
   generate-docker-image:
@@ -23,3 +26,9 @@ jobs:
     steps:
     - name: Setup Build Image
       uses: docker/setup-buildx-action@v2.0.0
+
+    - name: Docker Login
+        uses: docker/login-action@v2.0.0
+        with:
+          username: renanl
+          password: ${{ secrets.PASSWORD_DOCKER_HUB }}
